--- a/Sources/18127259.ipynb
+++ b/Sources/18127259.ipynb
@@ -2,10 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(r'..\\Data\\wine.csv', sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1 = 0.0059251613739160075\n",
+      "x2 = -1.1080375422598763\n",
+      "x3 = -0.26304628369886207\n",
+      "x4 = 0.015322283066628407\n",
+      "x5 = -1.7305027430592603\n",
+      "x6 = 0.003801419076872639\n",
+      "x7 = -0.003898998694544565\n",
+      "x8 = 4.338587684504782\n",
+      "x9 = -0.45853547521854976\n",
+      "x10 = 0.7297186624705582\n",
+      "x11 = 0.30885864844890126\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a. Sử dụng toàn bộ 11 đặc trưng đề bài cung cấp.\n",
+    "df = np.array(df)\n",
+    "A = df[:,:-1]\n",
+    "b = df[:,-1:].reshape(len(df),)\n",
+    "x_hat = np.linalg.pinv(A) @ b\n",
+    "\n",
+    "for i in range(len(x_hat)):\n",
+    "    print('x'+ str(i + 1) + ' = ' + str(x_hat[i]))"
+   ]
   }
  ],
  "metadata": {
