--- a/Sources/18127259.ipynb
+++ b/Sources/18127259.ipynb
@@ -14,16 +14,271 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.700</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.99780</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.880</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>0.99680</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.760</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.092</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0.99700</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.99800</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.700</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.99780</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.745</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.99588</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1195</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.078</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0.99633</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1196</th>\n",
+       "      <td>7.9</td>\n",
+       "      <td>0.580</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.99686</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1197</th>\n",
+       "      <td>7.7</td>\n",
+       "      <td>0.570</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.069</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.99458</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1198</th>\n",
+       "      <td>7.7</td>\n",
+       "      <td>0.260</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.052</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0.99510</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>10.9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1199 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0               7.4             0.700         0.00             1.9      0.076   \n",
+       "1               7.8             0.880         0.00             2.6      0.098   \n",
+       "2               7.8             0.760         0.04             2.3      0.092   \n",
+       "3              11.2             0.280         0.56             1.9      0.075   \n",
+       "4               7.4             0.700         0.00             1.9      0.076   \n",
+       "...             ...               ...          ...             ...        ...   \n",
+       "1194            7.0             0.745         0.12             1.8      0.114   \n",
+       "1195            6.2             0.430         0.22             1.8      0.078   \n",
+       "1196            7.9             0.580         0.23             2.3      0.076   \n",
+       "1197            7.7             0.570         0.21             1.5      0.069   \n",
+       "1198            7.7             0.260         0.26             2.0      0.052   \n",
+       "\n",
+       "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                    11.0                    34  0.99780  3.51       0.56   \n",
+       "1                    25.0                    67  0.99680  3.20       0.68   \n",
+       "2                    15.0                    54  0.99700  3.26       0.65   \n",
+       "3                    17.0                    60  0.99800  3.16       0.58   \n",
+       "4                    11.0                    34  0.99780  3.51       0.56   \n",
+       "...                   ...                   ...      ...   ...        ...   \n",
+       "1194                 15.0                    64  0.99588  3.22       0.59   \n",
+       "1195                 21.0                    56  0.99633  3.52       0.60   \n",
+       "1196                 23.0                    94  0.99686  3.21       0.58   \n",
+       "1197                  4.0                     9  0.99458  3.16       0.54   \n",
+       "1198                 19.0                    77  0.99510  3.15       0.79   \n",
+       "\n",
+       "      alcohol  quality  \n",
+       "0         9.4        5  \n",
+       "1         9.8        5  \n",
+       "2         9.8        5  \n",
+       "3         9.8        6  \n",
+       "4         9.4        5  \n",
+       "...       ...      ...  \n",
+       "1194      9.5        6  \n",
+       "1195      9.5        6  \n",
+       "1196      9.5        6  \n",
+       "1197      9.8        6  \n",
+       "1198     10.9        6  \n",
+       "\n",
+       "[1199 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(r'..\\Data\\wine.csv', sep=';')\n",
     "headers = list(df.columns.values)\n",
-    "data = np.array(df)"
+    "data = np.array(df)\n",
+    "df.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,24 +313,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#1: alcohol (0.547671112842504)\n",
-      "#2: density (0.7147989733781712)\n",
-      "#3: pH (0.7426436192032513)\n",
-      "#4: fixed acidity (1.07724212539448)\n",
-      "#5: sulphates (1.0982698120183385)\n",
-      "#6: volatile acidity (1.864347660175296)\n",
-      "#7: residual sugar (2.014247435112465)\n",
-      "#8: chlorides (2.1095866742816884)\n",
-      "#9: citric acid (2.648583394468612)\n",
-      "#10: free sulfur dioxide (2.843535296019925)\n",
-      "#11: total sulfur dioxide (3.1392660467790603)\n"
+      "               Tính chất  Sai số A  Sai số B  Sai số C  Sai số D  Sai số TB  \\\n",
+      "0                alcohol  0.556146  0.525760  0.596566  0.512212   0.547671   \n",
+      "1                density  0.782727  0.696102  0.685753  0.694613   0.714799   \n",
+      "2                     pH  0.791555  0.722449  0.736420  0.720151   0.742644   \n",
+      "3          fixed acidity  1.221617  0.856488  1.239303  0.991560   1.077242   \n",
+      "4              sulphates  1.200110  1.253365  0.935362  1.004242   1.098270   \n",
+      "5       volatile acidity  2.296810  1.618290  1.841731  1.700559   1.864348   \n",
+      "6         residual sugar  2.545658  1.988977  1.894290  1.628064   2.014247   \n",
+      "7              chlorides  2.536739  1.932540  2.099208  1.869860   2.109587   \n",
+      "8            citric acid  2.488746  2.948598  2.370226  2.786764   2.648583   \n",
+      "9    free sulfur dioxide  3.255725  2.518466  3.123854  2.476097   2.843535   \n",
+      "10  total sulfur dioxide  3.647015  2.798878  3.230203  2.880968   3.139266   \n",
+      "\n",
+      "    Xếp hạng  \n",
+      "0          1  \n",
+      "1          2  \n",
+      "2          3  \n",
+      "3          4  \n",
+      "4          5  \n",
+      "5          6  \n",
+      "6          7  \n",
+      "7          8  \n",
+      "8          9  \n",
+      "9         10  \n",
+      "10        11  \n"
      ]
     }
    ],
@@ -99,33 +368,102 @@
     "    models = [data[i*n:i*n+n, :] for i in range(model_num-1)]\n",
     "    models.append(data[(model_num-1)*n:, :])\n",
     "\n",
-    "    sum_avg_residual = 0\n",
+    "    avg_residuals = []\n",
     "    for i in range(model_num):\n",
     "        train = np.concatenate(models[:-1], axis=0)\n",
     "        test = models[-1]\n",
-    "        sum_avg_residual += sub_calc_avg_residual(train, test)\n",
+    "        avg_residuals.append(sub_calc_avg_residual(train, test))\n",
     "        \n",
     "        temp = models[-1]\n",
     "        models[-1] = models[i]\n",
     "        models[i] = temp\n",
     "    \n",
-    "    return sum_avg_residual / model_num\n",
+    "    return np.average(avg_residuals), avg_residuals\n",
     "\n",
     "\n",
-    "def cross_validation(data, model_num=4):\n",
+    "def feature_ranking(data, model_num=4):\n",
     "    avg_residuals = []\n",
+    "    sub_avg_residuals = []\n",
     "    \n",
     "    for i in range(len(data[0])-1):\n",
     "        sub_data = np.concatenate((data[:, i:i+1], data[:, -1:]), axis=1)\n",
-    "        avg_residuals.append(calc_avg_residual(sub_data, model_num))\n",
+    "        avg_residual, sub_avg_residual = calc_avg_residual(sub_data, model_num)\n",
+    "        avg_residuals.append(avg_residual)\n",
+    "        sub_avg_residuals.append(sub_avg_residual)\n",
     "    \n",
-    "    return np.argsort(avg_residuals), np.sort(avg_residuals)\n",
+    "    return np.argsort(avg_residuals), avg_residuals, sub_avg_residuals\n",
     "\n",
     "\n",
-    "indices, values = cross_validation(data)\n",
-    "for i in range(len(indices)):\n",
-    "    print('#' + str(i+1) + ': ' + headers[indices[i]] + ' (' + str(values[i]) + ')')"
+    "def display_ranking(data, headers):\n",
+    "    indices, avg_residuals, sub_avg_residuals = feature_ranking(data)\n",
+    "    \n",
+    "    ranking_data = []\n",
+    "    for i in range(len(indices)):\n",
+    "        row = []\n",
+    "        row.append(headers[indices[i]])\n",
+    "        row.append(sub_avg_residuals[indices[i]][0])\n",
+    "        row.append(sub_avg_residuals[indices[i]][1])\n",
+    "        row.append(sub_avg_residuals[indices[i]][2])\n",
+    "        row.append(sub_avg_residuals[indices[i]][3])\n",
+    "        row.append(avg_residuals[indices[i]])\n",
+    "        row.append(i + 1)\n",
+    "        ranking_data.append(row)\n",
+    "        \n",
+    "    tab = pd.DataFrame(ranking_data, columns=[\"Tính chất\", \"Sai số A\", \"Sai số B\", \"Sai số C\", \"Sai số D\", \"Sai số TB\", \"Xếp hạng\"])\n",
+    "    print(tab)\n",
+    "\n",
+    "\n",
+    "display_ranking(data, headers)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sai số theo phương pháp của em: 0.5312640513600049\n",
+      "Sai số theo phương pháp của câu a: 0.5150558048747267\n",
+      "Chênh lệch giữa 2 sai số: 0.016208246485278188\n"
+     ]
+    }
+   ],
+   "source": [
+    "# c. Xây dựng một mô hình của riêng bạn cho kết quả tốt nhất. (Lấy 6 đặc trưng cho kết quả tốt nhất)\n",
+    "def my_cross_validation(data, model_num=4):\n",
+    "    n = 6\n",
+    "    indices, _, _ = feature_ranking(data)\n",
+    "    best_indices = indices[:n]\n",
+    "    \n",
+    "    best_data = []\n",
+    "    for i in best_indices:\n",
+    "        best_data.append(data[:, i:i+1])\n",
+    "    best_data.append(data[:, -1:])\n",
+    "    best_data = np.concatenate(best_data, axis=1)\n",
+    "    \n",
+    "    return calc_avg_residual(best_data, model_num)[0]\n",
+    "\n",
+    "\n",
+    "def original_cross_validation(data, model_num=4):\n",
+    "    return calc_avg_residual(data, model_num)[0]\n",
+    "\n",
+    "\n",
+    "my_residual = my_cross_validation(data)\n",
+    "original_residual = original_cross_validation(data)\n",
+    "print('Sai số theo phương pháp của em: ' + str(my_residual))\n",
+    "print('Sai số theo phương pháp của câu a: ' + str(original_residual))\n",
+    "print('Chênh lệch giữa 2 sai số: ' + str(np.abs(my_residual - original_residual)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
