--- a/Submission/18127259/18127259.ipynb
+++ b/Submission/18127259/18127259.ipynb
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In ra kết quả của phương pháp hồi quy tuyến tính áp dụng trên 1 bộ dữ liệu.\n",
+    "# Kết quả của phương pháp hồi quy tuyến tính áp dụng trên 1 bộ dữ liệu.\n",
     "def linear_regression(data, headers):\n",
     "    x_hat = calc_x_hat(data)\n",
     "        \n",
